Fix collapsing comments not working when maintenance notification is present

--- a/hn-plus/src/chrome/css/content.scss
+++ b/hn-plus/src/chrome/css/content.scss
@@ -13,7 +13,8 @@ html {
                         }
                     }
 
-                    > tr:nth-of-type(3) {
+                    // Post (second-to-last table row).
+                    > tr:nth-last-child(2) {
                         color: orange;
                         > td {
                             color: violet;
